--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,6 +1,17 @@
-<h1>Customer OnBoarding</h1>
 
 <%= form_with(model: customer, local: true) do |form| %>
+ <% if customer.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(customer.errors.count, "error") %> prohibited this customer from being created:</h2>
+
+      <ul>
+      <% customer.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <div class="field form-group">
     <%= form.text_field :fname , class: "form-control", placeholder: "First Name"%>
   </div>
@@ -13,6 +24,11 @@
   <div class="field form-group ">
     
     <%= form.email_field :email, class: "form-control" , placeholder: "Email"%>
+  </div>
+
+  <div class="field form-group">
+    <%= form.label :image %>
+    <%= form.file_field :image %>
   </div>
 
   <div class="field form-group">
