--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -4,7 +4,10 @@
 </head>
 
 <body>
-	<h2>Listing All Customers!</h2>
+	<br><br/>
+	<h2 style="color:rebeccapurple;padding-left: 20px;">Listing All Customers!</h2>
+	<br>
+
 
 	<table class="table table-striped table table-bordered table table-hover">
 	  <thead class="table-dark">
@@ -12,19 +15,26 @@
 	  		<td> First Name </td>
 	  		<td> Last Name </td>
 	  		<td> Email </td>
+	  		<td> CreatedAt </td>
 	  	</tr>
 	  </thead>
 	<% @customers.each do |custm|%> 
 	  <tr>
-	    <td> <%= custm.fname %> </td>
+	    <td> <%= link_to custm.fname, customer_path(custm) %> </td>
 	    <td> <%= custm.lname %></td>
 	    <td> <%= custm.email %></td>
-	    <td>  <%= link_to 'EDIT' , edit_customer_path(custm), class:"btn btn-success btn-sm" %> </td>
-	    <td> <%= link_to 'DELETE' , customer_path(custm), method: :delete, data: { confirm: "Are you sure?"} , class:"btn btn-danger btn-sm" %> </td>
+	    <td> <%= custm.created_at %> </td>
+	    <% if current_user %>
+	      <td>  <%= link_to 'EDIT' , edit_customer_path(custm), class:"btn btn-success btn-sm" %> </td>
+	      <td> <%= link_to 'DELETE' , customer_path(custm), method: :delete, data: { confirm: "Are you sure?"} , class:"btn btn-danger btn-sm" %> </td>
+	    <% else %>
+	    <% end %>
 	  </tr>
 	<% end %>
 	</table>
 
-	<button type="button" class="btn btn-warning btn-lg"> <%= link_to 'Add New Customer', new_customer_path %>  </button>
+	<% if current_user %>
+	  <button type="button" class="btn btn-warning btn-lg" style="background-color:lightsteelblue; "> <%= link_to 'Add New Customer', new_customer_path %>  </button>
+	<%end%>
   </body>
  </html>
