--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,4 +1,10 @@
-<h2> Customer Profile </h2>
+<h2 style="color:orange; text-align: center;"> Customer Profile </h2>
+
+<div style="text-align: left;">
+	<% if @customer.image.attached? %>
+	  <%= image_tag(@customer.image, style:"width:275px;margin-left:25px;") %>
+	<% end %>
+</div>
 
 <h3> First Name : <%= @customer.fname %> </h3>
 
@@ -8,4 +14,29 @@
 
 <h3> Phone  : <%= @customer.phone %> </h3>
 
-<h3> Address : <%= @customer.address %> </h3>
+<h3> Address : <%= @customer.address %> </h3> <br>
+
+<% if current_user %>
+
+<h3> Orders: </h3>
+
+<table class="table table-striped table table-bordered table table-hover">
+	<thead>
+		<td> OrderCategory</td>
+		<td> Order Status</td>
+		<td> Tailor Name</td>
+	</thead>
+	<tbody>
+		<% @customer.orders.each do |ord| %>
+		<tr>
+			<td> <%= ord.category %> </td>
+			<td> <%= ord.status%> </td>
+			<td> <%= ord.tailor.name%> </td>
+		</tr>
+		<%end%>
+	</tbody>
+</table>
+<% end%>
+
+<%= link_to 'Edit', edit_customer_path(@customer) , class:"btn btn-danger"%> 
+<%= link_to 'Back', customers_path , class:"btn btn-success"%>
